<resources>
    <string name="app_name">Авторизация для Wi-Fi BMSTU</string>
    <string name="notfication_title">Подключение к WiFi</string>

    <string name="not">не</string>
    <string name="error" formatted="false">Ошибка: %s</string>

    <string name="toast_lwrite_permission_deny">Ну и чего ты наделал? :( Теперь я не смогу писать логи :( Хотя может это и к лучшему…</string>

    <string name="debug_name">Логи программы</string>
    <string name="debug_retry">Повторить попытку</string>
    <string name="debug_retry_service">Сервис соединения перезапущен</string>
    <string name="debug_show_log">Показывать Debug логи</string>
    <string name="debug_login_no_login">Отсуствует логин и пароль</string>

    <string name="wait_ssid">Ожидание SSID…</string>
    <string name="wait_ip">Ожидание IP… </string>
    <string name="wait_ip_sucs">Мы дождались IP</string>
    <string name="wait_ip_error">Превышено время ожидания IP!</string>
    <string name="auth_err">Ошибка авторизации</string>
    <string name="auth_conn">Инициализация подключения</string>
    <string name="auth_open">Подключение к серверу</string>
    <string name="auth">Авторизация в сети</string>
    <string name="auth_send_data">Отправка данных на сервер</string>
    <string name="auth_get_data">Получение данных</string>
    <string name="auth_err_login">Неправильный логин и пароль</string>
    <string name="auth_finished">Авторизация прошла успешно ^_^</string>

    <string name="auth_logout_error_ssid">В данный момент вы не подключенны к сети, которую поддерживает приложение</string>
    <string name="auth_logout">Выход из сети</string>
    <string name="auth_logout_start">Попытка выхода из сети…</string>
    <string name="auth_logout_end">Вроде получилось… Но ничего гарантировать не могу</string>
    <string name="auth_logout_error">Ошибка при выходе из сети</string>
    <string name="auth_logout_error_session">Не получилось найти текущию сессию. Вы точно авторизовывались с помощью приложения?</string>


    <string name="sucsesful">Успешно</string>
    <string name="login_err">Ощибка!</string>
    <string name="login_wifi_choise">Выберите WiFi сеть…</string>
    <string name="login_wifi_err">Ошибка! Отсутсвует название сети wifi! Это баг. Просьба об этом случае написать автору программы (Настройки -> О программе)</string>
    <string name="login_text_wifi">Для сети:</string>
    <string name="login_button_save">Сохранить</string>
    <string name="login_button_hide">Скрыть</string>
    <string name="login">Авторизация</string>
    <string name="login_logBtn">Войти</string>
    <string name="login_rememberPassword">Запомнить пароль</string>
    <string name="login_password">Пароль</string>
    <string name="login_login">Логин</string>

    <string name="pref_wifi">Настройки обнаружения</string>
    <string name="pref_wifi_autoconnect">Автоматическая авторизация в сети</string>
    <string name="pref_wifi_ip_wait">Ожидание IP адреса</string>
    <string name="pref_wifi_ip_wait_descr">Время в секундах ожидания IP адреса. Слишком маленькое значение может привести к тому, что приложение будет аварийно завершаться, так и не дождавшись получения IP. (По умолчанию: 30)</string>
    <string name="pref_wifi_ssid_wait">Ожидание SSID</string>
    <string name="pref_wifi_ssid_wait_descr">Время в секундах ожидания SSID. Слишком маленькое значение может привести к тому, что приложение будет аварийно завершаться, так и не дождавшись получения SSID. (По умолчанию: 10) </string>
    <string name="pref_wifi_check_strict">Надёжная проверка соединения</string>
    <string name="pref_wifi_check_strict_summary">Более медленная проверка через подключение к одному из публичных серверов в интернете.</string>

    <string name="pref_about">О программе</string>
    <string name="pref_about_about">О программе</string>
    <string name="pref_about_contact">Связаться с автором</string>
    <string name="pref_about_contect_desct">Если возникли трудности в работе с программой или возникли сложности, пишите по одному из предложенных каналов.
    P.S. Ну если хочется поболтать, тоже пишите :3</string>

    <string name="pref">Настройки</string>
    <string name="pref_auth">Авторизация</string>
    <string name="pref_auth_descr">Настройки, связанные с авторизацией. Данные входа и настройки алгоритма авторизации в сети</string>
    <string name="pref_auth_login_count">Количество попыток авторизации</string>
    <string name="pref_auth_login_count_descr">По умолчанию: 3</string>
    <string name="pref_auth_login_changeLogin">Сменить логин и пароль</string>
    <string name="pref_auth_login_forgetLogin">Забыть логин и пароль</string>
    <string name="pref_auth_login_forgetLogin_toast">Логин и пароль удален</string>
    <string name="pref_auth_login_open">Открыть окно ввода логина и пароля</string>

    <string name="about_me_vk">ВКонтакте</string>
    <string name="about_me_vk_link">https://vk.com/kulikof.nikita</string>
    <string name="about_me_telegram">Telegram</string>
    <string name="about_me_telegram_link">http://telegram.me/lionzxy</string>
    <string name="about_me_4pda">4PDA</string>
    <string name="about_me_4pda_link">http://4pda.ru/forum/index.php?showuser=2775318</string>
    <string name="about_me_github">GitHub</string>
    <string name="about_me_github_link">https://github.com/LionZXY</string>
    <string name="about_me_email">E-mail</string>
    <string name="about_me_email_link">nikita@kulikof.ru</string>
    <string name="about_me_email_send">Отправка письма…</string>
    <string name="about_me_email_err">У вас нет приложений для отправки письма</string>

    <string name="stop">Stop</string>

    <string name="by">Никита Куликов (ИУ4–23)</string>

    <!-- Текст для нотификаций -->
    <string name="notification_success">Успешно подключено</string>
    <string name="notification_success_log">Нажмите, чтобы узнать подробности</string>
    <string name="notification_register">Авторизация в сети</string>
    <string name="notification_register_check">Проверка наличия логина и пароля</string>
    <string name="notification_connection_check">Проверка соединения</string>
    <string name="notification_not_registered">Устройство не зарегистрировано</string>
    <string name="notification_not_registered_register">Нажмите, чтобы перейти к регистрации</string>
    <string name="notification_error">Не удалось подключиться</string>
    <string name="notification_error_log">Нажмите, чтобы узнать подробности или попробовать снова</string>
    <string name="notification_unsupported">Сеть не поддерживается</string>
    <string name="notification_progress_waiting">Ожидание…</string>
    <string name="notification_try_out_of" formatted="false">попытка %d из %d</string>
    <string name="notification_ip_waiting">Ожидание IP адреса…</string>
    <string name="notification_ip_wait_result" formatted="false">IP адрес%s получен в течение %d секунд</string>

    <string name="notification_auth_connecting" formatted="false">Подключение к сети %s</string>
    <string name="notification_algorithm_name" formatted="false">Название алгоритма: %s</string>
</resources>
