<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="TEST">
    <PreferenceCategory android:title="@string/pref_wifi">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_autoconnect"
            android:title="@string/pref_wifi_autoconnect" />
        <EditTextPreference
            android:defaultValue="30"
            android:inputType="numberDecimal"
            android:key="pref_ip_wait"
            android:summary="@string/pref_wifi_ip_wait_descr"
            android:title="@string/pref_wifi_ip_wait" />
        <EditTextPreference
            android:defaultValue="10"
            android:inputType="numberDecimal"
            android:key="pref_ssid_wait"
            android:summary="@string/pref_wifi_ssid_wait_descr"
            android:title="@string/pref_wifi_ssid_wait" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_wifi_check_strict"
            android:summary="@string/pref_wifi_check_strict_summary"
            android:title="@string/pref_wifi_check_strict" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_auth">
        <EditTextPreference
            android:defaultValue="3"
            android:inputType="numberDecimal"
            android:key="pref_auth_count"
            android:summary="@string/pref_auth_login_count_descr"
            android:title="@string/pref_auth_login_count" />
        <Preference android:title="@string/pref_auth_login_open">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="ru.lionzxy.bmstuwifi.LoginActivity_"
                android:targetPackage="ru.lionzxy.bmstuwifi" />

        </Preference>
        <Preference android:title="@string/pref_auth_login_changeLogin">
            <intent
                android:action="ru.lionzxy.bmstuwifi.LoginActivity.RESAVE_PSWD"
                android:targetClass="ru.lionzxy.bmstuwifi.LoginActivity_"
                android:targetPackage="ru.lionzxy.bmstuwifi" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about">
        <PreferenceScreen
            android:summary="@string/pref_about_contect_desct"
            android:title="@string/pref_about_contact">
            <Preference
                android:icon="@drawable/logo_vk"
                android:summary="@string/about_me_vk_link"
                android:title="@string/about_me_vk">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/about_me_vk_link" />
            </Preference>
            <Preference
                android:icon="@drawable/logo_telegram"
                android:summary="@string/about_me_telegram_link"
                android:title="@string/about_me_telegram">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/about_me_telegram_link" />
            </Preference>
            <Preference
                android:icon="@drawable/logo_4pda"
                android:summary="@string/about_me_4pda_link"
                android:title="@string/about_me_4pda">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/about_me_4pda_link" />
            </Preference>
            <Preference
                android:icon="@drawable/logo_github"
                android:summary="@string/about_me_github_link"
                android:title="@string/about_me_github">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/about_me_github_link" />
            </Preference>
            <Preference
                android:id="@+id/about_me_email"
                android:icon="@drawable/logo_email"
                android:key="email"
                android:summary="@string/about_me_email_link"
                android:title="@string/about_me_email" />
        </PreferenceScreen>
        <Preference android:title="@string/debug_name">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="ru.lionzxy.bmstuwifi.DebugActivity_"
                android:targetPackage="ru.lionzxy.bmstuwifi" />
        </Preference>
        <Preference
            android:summary="@string/versionName"
            android:title="@string/pref_about_about" />
    </PreferenceCategory>
</PreferenceScreen>