<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_wifi">
        <SwitchPreference
            android:key="pref_autoconnect"
            android:title="@string/pref_wifi_autoconnect"
            android:defaultValue="true"/>
        <EditTextPreference
            android:defaultValue="30"
            android:inputType="numberDecimal"
            android:key="pref_ip_wait"
            android:summary="@string/pref_wifi_ip_wait_descr"
            android:title="@string/pref_wifi_ip_wait" />
        <EditTextPreference
            android:defaultValue="10"
            android:inputType="numberDecimal"
            android:key="pref_ssid_wait"
            android:summary="@string/pref_wifi_ssid_wait_descr"
            android:title="@string/pref_wifi_ssid_wait" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_wifi_check_strict"
            android:summary="@string/pref_wifi_check_strict_summary"
            android:title="@string/pref_wifi_check_strict" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_auth">
        <EditTextPreference
            android:defaultValue="3"
            android:inputType="numberDecimal"
            android:key="pref_auth_count"
            android:summary="@string/pref_auth_login_count_descr"
            android:title="@string/pref_auth_login_count" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about">

    </PreferenceCategory>
</PreferenceScreen>