<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/main_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:paddingBottom="30dp"
            android:src="@drawable/logo_white" />

        <ru.lionzxy.bmstuwifi.views.BlueButton
            android:id="@+id/auth"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            app:imageSrc="@drawable/ic_lock_outline_white_24dp"
            app:text="@string/login" />

        <ru.lionzxy.bmstuwifi.views.BlueButton
            android:id="@+id/settings"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            app:imageSrc="@drawable/ic_settings_white_24dp"
            app:text="@string/pref" />

        <ru.lionzxy.bmstuwifi.views.BlueButton
            android:id="@+id/logout"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            app:imageSrc="@drawable/ic_exit_to_app_white_24dp"
            app:text="@string/auth_logout" />
    </LinearLayout>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom"
        android:text="@string/versionName"
        android:textColor="@android:color/white"
        android:textSize="5pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/by"
        android:textColor="@android:color/white"
        android:textSize="5pt" />
</RelativeLayout>
